name:                ext2
version:             0.1.0.0
synopsis:            A library for playing around with ext2. Might not work very well.
description:         A library for playing around with ext2.
homepage:            https://github.com/relrod/ext2
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod <ricky@elrod.me>
category:            System
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     System.Ext2
                     , System.Ext2.Internal.LensHacks
  build-depends:       base >= 4 && < 5
                     , binary >= 0.7 && < 0.8
                     , bytestring >= 0.10 && < 0.11
                     , lens >= 4.5 && < 5
                     , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
